2007-09-17  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (ip_suggest_backup): Fixed bug when trying to
	cancel the suggest-backup dialog with escape hardkey (N69652).

	* src/util.cc (start_interaction_flow): Fixed a localization error
	for the "operation in progress" message (N68912).
	(make_global_package_list): Show logical background colors for
	even/odd rows in the package list (N69616).

	* utils/maemo-select-menu-location-main.c (make_folder_tree_view):
	Fixed a mistake creating a GtkTreeModelFilter (N69644).

2007-09-14  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (install_from_file_flow): Added extra logic to
	convert the filename received to a valid GnomeVFS uri (N66407).

	* src/search.cc (emit_dialog_response): New callback. It emits the
	"response" signal for the search dialog with GTK_RESPONSE_OK as
	the response ID (N58335).
	(show_search_dialog_flow): Signal "activate" of GtkEntry for
	 search words connected to the new callback (N58335).

2007-09-13  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (result_code_to_message): Changed
	implementation and list of parameters to also receive package info
	struct and to take it into account to include its name in the
	returned string (N68825) (N68832).
	(ip_install_cur_reply): Changed the way of calling to
	result_code_to_message (N68825) (N68832).
	(ip_install_reply): Changed the way of calling to
	result_code_to_message (N68825) (N68832).
	(up_remove): Added the name of the package to the string shown
	when uninstalling it is not possible (N68850).
	(installable_status_to_message): Fixed some mistakes setting the
	final localized strings with the name of the packages inside of
	them (N68879) (N68886) (N68898).
	(ip_install_with_info): Set the logical id for the "Not enough
	memory" message (N68911).

	* src/util.cc (entertainment_insensitive_press): Replaced
	hardcoded string with the right l10n logical id (N68844).
